--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 #!/data/data/com.termux/files/usr/bin/bash
 brandomusic_f() {
 set +o noclobber; format='audio/mp3'; format2='audio'; file="${1:+"${1}/*.mp3"}"; file2="${1:-"${HOME}/downloads/*.mp3"}"; files=$(busybox ls ${file:-${file2}}); n="${#files[@]}"; pick="${files[RANDOM % n]}"; result="$(printf "${0:+${pick}}" | shuf -n 1)"; tmp="/sdcard/Download/"$(basename "${result}")""; \cd "/sdcard/Download" &> /dev/null; \cp -rf "${result}" "${tmp}" &> /dev/null; echo "Siap mendengarkan musik? (y/N)"; read -s -n 1 answer; echo; if [[ "$answer" =~ ^[Yy]$ ]]; then echo "warning: Centang selalu aplikasi pemutar favorit anda untuk dapat melewati popup setiap kali menjalankan perintah ini."; xdg-open --content-type ${format} "${tmp}"; sleep 1; echo; cd - &> /dev/null; else echo -e "O-K tidak apa-apa, mungkin lain kali."; rm -f "${tmp}"; cd - &> /dev/null; fi;
-}; declare -F brandomusic_f
+}; declare -F brandomusic_f; brandomusic_f
 # </body></html>
