--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-#<!DOCTYPE html><html lang="en"><head><title>Luisadha Homepage</title><meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1" /></head><body><h2>#!/data/data/com.termux/files/usr/bin/env bash</h2>
-<h2>. <(curl -L https://luisadha.github.io/brandomusic)</h2>
+#<!DOCTYPE html><html lang="en"><head><title>#!/data/data/com.termux/files/usr/bin/env bash</title><meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1" /></head><body><h2>. <(curl -L https://luisadha.github.io/brandomusic)</h2>
 #<!--
 shopt -s nullglob globstar
 set +o noclobber
@@ -26,5 +25,4 @@ case "$answer" in
 esac
 
 cd - &>/dev/null;
-# -->
-#</body></html>
+# --> </body></html>
