--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 #<!DOCTYPE html><head><link rel="stylesheet" type="text/css" href="asciinema-player.css" /><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Usage</title><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" /><link rel="stylesheet" href="https://unpkg.com/@highlightjs/cdn-assets@11.5.0/styles/default.min.css"><script src="https://unpkg.com/@highlightjs/cdn-assets@11.5.0/highlight.min.js"></script><script> hljs.initHighlightingOnLoad();</script><style>body { font-family: monospace; background: rgba(245, 245, 245, 1); } footer { font-size: 0.65rem; } a { color: inherit; text-decoration: none; } pre { white-space: pre-wrap; /* Supaya teks wrap otomatis */ word-wrap: break-word; /* Pastikan kata bisa pecah */ overflow-x: auto; /* Tambahkan scroll horizontal kalau tetap kepanjangan */ max-width: 100%; /* Hindari melebihi lebar layar */ } code { display: block; overflow-x: auto; /* Pastikan teks wrap */ border-radius: 4px; font-size: 1.1rem; color: #F0F0F0 !important; background: rgb(11 12 14) !important; } .github-fork-ribbon:before { background-color: rgb(11 12 14); } .hidden-text { white-space: nowrap; margin: 0; padding: 0; visibility: hidden; /* atau display: none; */  } .container { display: flex; flex-direction: column; /* Supaya item dalam satu kolom */ align-items: center; /* Biar rapi di tengah */ width: 100%; /* Hindari elemen terlalu lebar */ max-width: 100vw; /* Batasi sesuai lebar layar */ overflow-x: auto; /* Scroll kalau perlu */ }</style></head><body>: Brandomusic is written in bash <a class="github-fork-ribbon" href="https://github.com/luisadha/brandomusic" data-ribbon="Contribute on GitHub" title="Contribute on GitHub">Contribute on GitHub</a> <h2>
 #!/usr/bin/env bash </br></h2><span>luisadha.github.io/brandomusic Use this self-hosted script to Playing song on ~/storage/music on Termux.</span><h3>
 ### <a name="usage" href="#usage">Bermain di Terminal</a></h2><pre><code code="shell">. <(curl -L luisadha.github.io/brandomusic)</code></pre><h3><span class="hidden-text">
+set -eu
 shopt -s nullglob globstar
 set +o noclobber
 MUSIC_DIR="${HOME}/storage/music"
 IFS=$'\n'  # Gunakan newline sebagai pemisah array
 format='audio/mp3'; file="${1:-$MUSIC_DIR/*.mp3}"; files=($file); n=${#files[@]}; if (( n == 0 )); then echo "Tidak ada file MP3 ditemukan."; exit 1; fi
 pick="${files[RANDOM % n]}"
-tmp="/sdcard/Download/$(basename "$pick")"
-cd "/sdcard/Download" &>/dev/null
+tmp="/storage/download/$(basename "$pick")"
+cd "/storage/download" &>/dev/null
 cp -rf "$pick" "$tmp" &>/dev/null
 echo "Siap mendengarkan musik? (y/N)"
 read -s -n 1 answer
@@ -27,4 +28,5 @@ case "$answer" in
 esac
 rm -f "$tmp"
 cd - &>/dev/null;
+set +eu
 #</code></pre><footer>#### Copyright (C) 2021-2025 <a href="https://luisadha.my.id">luisadha.my.id</a> (<a href="https://github.com/luisadha">github.com/luisadha</a>) ####</footer><a href="https://asciinema.org/a/704914" target="_blank"><img src="https://asciinema.org/a/704914.svg" /></a><div id="player"></div><script src="asciinema-player.min.js"></script><script> AsciinemaPlayer.create(     '/assets/704914.cast',    document.getElementById('player'),     { cols: 54, rows: 28 }   );  </script></body></html>
