--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 #  <h3>Kode Bash:</h3>
 #  <pre><code class="bash">
 #!/usr/bin/env bash
-set -xv
+#set -xv
 set -eu
 shopt -s nullglob globstar
 set +o noclobber
@@ -68,7 +68,7 @@ fi
 # Hapus file sementara dan keluar
 rm -f "$tmp"
 set +eu
-set +vx
+#set +vx
 #  </code></pre>
 #
 #  <footer>
