--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 #  <pre><code class="bash">
 #!/usr/bin/env bash
 #set -xv
+  
 set -eu
 shopt -s nullglob globstar
 set +o noclobber
-
+[ "$1" = "-v" ] || [ "$1" = "--version" ] && { echo "brandomusic version 1.0"; exit; } 
 MUSIC_DIR="${HOME}/storage/music"
 IFS=$'\n'
 format='audio/mp3'
