--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 #set -eu
 shopt -s nullglob globstar
 set +o noclobber
-[ "$1" = "-v" ] || [ "$1" = "--version" ] && { echo "brandomusic 1.0"; exit; } 
+[ "${1:-}" = "-v" ] || [ "${1:-}" = "--version" ] && { echo "brandomusic 1.0"; exit; } 
 MUSIC_DIR="${HOME}/storage/music"
 IFS=$'\n'
 format='audio/mp3'
@@ -24,8 +24,7 @@ cp -f "$pick" "$tmp" &>/dev/null || {
   echo "Gagal menyalin file ke /storage/download"
   exit 1
 }
-
-echo -n "Siap mendengarkan musik? (y/N) "
+printf "%q\n" "Siap mendengarkan musik? (y/N)"
 read -s -n 1 answer < /dev/tty;
 echo
 
