--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ cp -f "$pick" "$tmp" &>/dev/null || {
   echo "Gagal menyalin file ke /storage/download"
   exit 1
 }
-printf "%q\n" "Siap mendengarkan musik? (y/N)"
+printf "%s\n" "Siap mendengarkan musik? (y/N)"
 read -s -n 1 answer < /dev/tty;
 echo
 
